--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -9,7 +9,7 @@ workflows:
       groups:
         - google_play 
       vars:
-        PACKAGE_NAME: "io.codemagic.flutteryaml" # fikreselam
+        PACKAGE_NAME: "io.codemagic.flutteryaml"
         GOOGLE_PLAY_TRACK: "alpha"
       flutter: stable
     scripts:
